--- a/mc_web_console_new_front/src/app/style/style.pcss
+++ b/mc_web_console_new_front/src/app/style/style.pcss
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.page {
+    @apply bg-gray-100;
+    padding: 24px;
+    display: flex;
+    flex-direction: column;
+
+    header {
+        display: flex;
+        align-items: center;
+        margin-bottom: 18px;
+        p {
+            @apply text-display-lg;
+            font-weight: 700;
+        }
+    }
+}
