--- a/mc_web_console_new_front/src/app/style/style.pcss
+++ b/mc_web_console_new_front/src/app/style/style.pcss
@@ -17,3 +17,20 @@ html:lang(ja), body:lang(ja) {
 pre {
     font-family: Noto Sans, Roboto, sans-serif;
 }
+
+.page {
+    @apply bg-gray-100;
+    padding: 24px;
+    display: flex;
+    flex-direction: column;
+
+    header {
+        display: flex;
+        align-items: center;
+        margin-bottom: 18px;
+        p {
+            @apply text-display-lg;
+            font-weight: 700;
+        }
+    }
+}
